# Advanced-Task-and-Packet-Management-in-CPP

./: .clang-format  CMakeLists.txt  PeriodicTask.cpp  PeriodicTask.h  PeriodicTaskFactory.cpp  PeriodicTaskFactory.h  README.md  TaskFactory.cpp  TaskFactory.h  TaskManager.cpp  TaskManager.h  main.cpp
include/: Logger.h  Packet.h  PeriodicTask.h  PeriodicTaskFactory.h  TaskManager.h
src/: PeriodicTask.cpp  PeriodicTaskFactory.cpp  TaskManager.cpp  main.cpp
test/: test_Logger.cpp  test_PeriodicTask.cpp  test_PeriodicTaskFactory.cpp  test_TaskManager.cpp
